# loopfuse

./: .gitignore  02_ir_demo.py  03_kv_fusion.py  04_spec_prefill.py  05_phase_kernels.py  LICENSE  Makefile  README.md  __init__.py  base.py  phase_profiler.py  phase_select.py  pyproject.toml  requirements.txt  ring_kv_cache.cu  roofline.py
analysis/: __init__.py  stats.py
analysis/ir/: __init__.py  dialect.py  printer.py
benchmarks/ci/: ci.yml
benchmarks/h1_phase_waste/: run.py
benchmarks/h2_kv_fusion/: run.py
benchmarks/h3_spec_prefill/: run.py
benchmarks/h4_phase_kernels/: run.py
benchmarks/h5_cross_hardware/: run.py
ir/: builder.py
kernels/cuda/: __init__.py  _cuda_ext.py  async_prefill.cu
kernels/pallas/: __init__.py  agent_attn.py
kernels/triton/: __init__.py  decode_attn.py  fused_ln_qkv.py  prefill_attn.py
notebooks/: 00_setup.py  01_phase_profiling.py  06_cross_hardware.py
paper/: loopfuse.tex
passes/: kv_fusion.py  spec_prefill.py
results/: h1_results.json
runtime/: __init__.py  executor.py  kv_pool.py
scripts/: generate_figures.py  run_all_benchmarks.sh
tests/: conftest.py  test_builder.py  test_ir_dialect.py  test_passes.py  test_printer.py  test_roofline.py  test_runtime.py  test_stats.py
